# cqindustry

./: LICENSE  PACKAGE_README.md  README.md  changes.md  example_runner.py  pyproject.toml
documentation/: barrier.md  can.md  chip.md  container.md  documentation.md  dome.md  portal.md  power.md  walkway.md
example/: barrier.py  barrier_alt.py  barrier_greebled.py  barrier_magnet_template.py  can_platform.py  can_rail.py  can_tower.py  can_tower_set.py  chip_can.py  chip_tower_set.py  chip_tower_set_2.py  chiptower_readme_example.py  combine.py  guard_rail.py  guard_rail_platform.py  platform.py  platformExample.py  ring.py  ring_conduit.py  walkway.py  walkway_irregular.py  walkway_tile.py
example/barrier/: barrier.py  barrier_alt.py  barrier_greebled.py  barrier_magnet_template.py
example/bridge/: straight.py
example/can/: can_platform.py  can_platform_conduit.py  can_rail.py  can_tower.py  can_tower_alt_ring.py  can_tower_set.py  can_tower_stairs.py  round_platform.py  round_platform_greebled_circles.py  stair_segment.py
example/chip/: chip_can.py  chip_tower_set.py  chip_tower_set_2.py  chiptower_readme_example.py  combine.py  conduit.py  guard_rail.py  guard_rail_platform.py  platformExample.py  ring.py  ring_conduit.py  ring_support.py
example/container/: container.py  containerDoor.py  container_frame.py  container_greeble_hack.py  (+5 more)
gltf/: power_power_assembly.gltf
stl/: barrier.stl  barrier_alt.stl  barrier_alt_c.stl  barrier_alt_curve_60.stl  barrier_alt_diag_left.stl  barrier_alt_diag_right.stl  barrier_alt_taper.stl  barrier_c.stl  barrier_curve_45.stl  barrier_curve_60.stl  barrier_curve_90.stl  barrier_detailed.stl  barrier_diag_left.stl  barrier_diag_left_short.stl  barrier_diag_right.stl  barrier_diag_right_short.stl  barrier_magnet_template.stl  barrier_taper.stl  bridge_straight.stl  can_platform.stl  can_rail.stl  can_round_platform.stl  can_round_platform_greebled_circles.stl  can_stair_segment.stl  can_tower.stl  can_tower_plate.stl  chip_can.stl  chip_conduit_class.stl  chip_readme_example.stl  chip_tower_set.stl  chip_tower_set_2.stl  combine.stl  container.stl  container_door.stl  container_floor.stl  container_floor_tile.stl  container_frame.stl  container_greebled.stl  container_ladder_exploded.stl  container_ramp.stl  (+65 more)
(+140 files in other folders)
