[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cqindustry"
version = "2.2.0"
authors = [
  { name="James Adams", email="inklink28@gmail.com" }
]
description = "Python Library for building Industrial terrain"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

dependencies = [
'cqterrain @ git+https://github.com/medicationforall/cqterrain@2.1.0',
]


[project.urls]
"Homepage" = "https://github.com/medicationforall/cqindustry"
"Bug Tracker" = "https://github.com/medicationforall/cqindustry/issues"
