[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "3.1.0"
name = "cqindustry"
description = "Python Library for building Industrial terrain"

authors = [
  { name="James Adams", email="inklink28@gmail.com" }
]

readme = "PACKAGE_README.md"
license = "Apache-2.0"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

requires-python = ">=3.10"
dependencies = [
'cqterrain==3.8.0'
]


[project.urls]
"Homepage" = "https://github.com/medicationforall/cqindustry"
"Bug Tracker" = "https://github.com/medicationforall/cqindustry/issues"
